[project]
name = "newdataservices"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=24.1.0",
    "alembic>=1.16.1",
    "black>=25.1.0",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "isort>=6.0.1",
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langchain-core>=0.3.65",
    "langchain-text-splitters>=0.3.0",
    "langchain-chroma>=0.2.0",
    "langchain-openai>=0.3.23",
    "langchain-qdrant>=0.2.0",
    "chromadb>=0.5.0",
    "qdrant-client>=1.9.0",
    "scikit-learn>=1.3.0",
    "langgraph>=0.4.8",
    "mypy>=1.16.0",
    "openai>=1.86.0",
    "passlib[bcrypt]>=1.7.4",
    "prometheus-client>=0.22.1",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.41",
    "structlog>=25.4.0",
    "tiktoken>=0.9.0",
    "uvicorn>=0.34.3",
]